# cleaning-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  webapp.env
docker/app/: Dockerfile  docker-entrypoint.sh  docker-entrypoint_dev.sh  wait-for-postgres.sh
docker/db/: Dockerfile  init-database.sh  pgbackup.sh
docker/nginx/: Dockerfile  default.conf  nginx.conf
fastapi-application/: .coveragerc  .env.template  commands.py  create_fastapi_app.py  default_logger_cfg.yaml  main.py
fastapi-application/alembic/: env.py
fastapi-application/alembic/versions/: 2024_12_31_1451-9a2404c97e70_initial_revision.py  2025_01_03_1849-cd97709ee1c6_create_cleanings_table.py  2025_01_12_1637-1ab0b1fb523c_add_datetime_columns.py  2025_01_12_1707-4b99c82cc967_create_user_table.py  2025_01_19_1837-16d311823a38_add_role_model_permission.py  2025_01_20_1152-b80e4684cb5a_remove_the_username_field_from_user_.py  2025_01_23_1325-f852d54d6b98_create_profiles.py  2025_01_23_1943-c39c7a3e71d8_changed_profiles.py  2025_01_26_1218-7ae3d425a9f9_reset_the_database_because_of_conflicts.py  2025_01_27_1406-6a77f719ea82_initial_revision.py  2025_01_27_1408-36aff9fc6551_recreated_all_tables.py  2025_01_29_1309-1f349da4d369_add_column_owner_to_cleanings_table.py  2025_04_10_1527-84d9b87f477a_recreate_all_tables.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: __init__.py
fastapi-application/api/api_v1/cleanings/: __init__.py  dependencies.py  models.py  schemas.py  views.py
fastapi-application/api/api_v1/evaluations/: __init__.py  dependencies.py  models.py  schemas.py  views.py
fastapi-application/api/api_v1/offers/: __init__.py  dependencies.py  models.py  schemas.py
fastapi-application/api/api_v1/offers/views/: cleanings.py  offers.py
fastapi-application/api/api_v1/profiles/: __init__.py  dependencies.py  models.py  schemas.py  views.py
fastapi-application/api/api_v1/users/: __init__.py  dependencies.py  jwt_helpers.py  models.py  schemas.py  views.py
fastapi-application/api/api_v1/users/views/: auth.py  users.py
fastapi-application/auth/: README.md  dependencies.py  http_pwd_bearer.py  schemas.py
fastapi-application/auth/utils/: auth_utils.py
fastapi-application/core/: config.py
fastapi-application/core/gunicorn/: app_options.py  application.py  logger.py
fastapi-application/core/models/: __init__.py  base.py  db_helper.py
fastapi-application/core/models/mixins/: __init__.py  int_id_pk.py
fastapi-application/crud/: base.py  cleanings.py  evaluations.py  offers.py  profiles.py  users.py
fastapi-application/scripts/: init_roles_and_admin.py
fastapi-application/server/: create_fastapi_app.py
fastapi-application/server/utils/: middlewares.py
fastapi-application/tests/: conftest.py  database.py
fastapi-application/tests/test_cleaning_service/: conftest.py  test_cleaning_offers.py  test_cleanings.py  test_evaluations.py  test_offers.py  test_profiles.py  test_users.py  test_users_auth.py
fastapi-application/utils/: __init__.py  case_converter.py  pydantic_custom_regex_validator.py
fastapi-application/utils/custom_logger/: filters.py  helpers.py  json_formatter.py  middlewares.py  schemas.py  setup.py
fastapi-application/utils/mailing/: helpers.py  messages.py  send_email.py
fastapi-application/utils/pagination/: helpers.py  paginator.py  schemas.py
