[tool.poetry]
name = "cleaning-service"
version = "0.1.0"
description = ""
authors = ["alexander <alfacat187@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
orjson = "^3.10.13"
asgi-lifespan = "^2.1.0"
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
bcrypt = "^4.2.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
email-validator = "^2.2.0"
python-multipart = "^0.0.20"
async-typer = "^0.1.8"
httpx = "^0.28.1"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.14.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.1"
pytest-postgresql = "^6.1.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
